Added .csv file formats that were transformed from .ndax files via script.

--- a/ndax_to_csv_script.ipynb
+++ b/ndax_to_csv_script.ipynb
@@ -2,24 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting LimeNDAX\n",
-      "  Downloading LimeNDAX-1.0.3-py3-none-any.whl.metadata (1.8 kB)\n",
-      "Requirement already satisfied: pandas in c:\\users\\heiliaavola\\anaconda3\\lib\\site-packages (from LimeNDAX) (2.2.2)\n",
-      "Requirement already satisfied: numpy in c:\\users\\heiliaavola\\anaconda3\\lib\\site-packages (from LimeNDAX) (1.26.4)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\heiliaavola\\anaconda3\\lib\\site-packages (from pandas->LimeNDAX) (2.9.0.post0)\n",
-      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\heiliaavola\\anaconda3\\lib\\site-packages (from pandas->LimeNDAX) (2024.1)\n",
-      "Requirement already satisfied: tzdata>=2022.7 in c:\\users\\heiliaavola\\anaconda3\\lib\\site-packages (from pandas->LimeNDAX) (2023.3)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\users\\heiliaavola\\anaconda3\\lib\\site-packages (from python-dateutil>=2.8.2->pandas->LimeNDAX) (1.16.0)\n",
-      "Downloading LimeNDAX-1.0.3-py3-none-any.whl (14 kB)\n",
-      "Installing collected packages: LimeNDAX\n",
-      "Successfully installed LimeNDAX-1.0.3\n",
+      "Requirement already satisfied: LimeNDAX in c:\\users\\heili\\anaconda3\\lib\\site-packages (1.0.3)\n",
+      "Requirement already satisfied: pandas in c:\\users\\heili\\anaconda3\\lib\\site-packages (from LimeNDAX) (2.0.3)\n",
+      "Requirement already satisfied: numpy in c:\\users\\heili\\anaconda3\\lib\\site-packages (from LimeNDAX) (1.24.3)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\heili\\anaconda3\\lib\\site-packages (from pandas->LimeNDAX) (2.8.2)\n",
+      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\heili\\anaconda3\\lib\\site-packages (from pandas->LimeNDAX) (2023.3.post1)\n",
+      "Requirement already satisfied: tzdata>=2022.1 in c:\\users\\heili\\anaconda3\\lib\\site-packages (from pandas->LimeNDAX) (2023.3)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\heili\\anaconda3\\lib\\site-packages (from python-dateutil>=2.8.2->pandas->LimeNDAX) (1.16.0)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -30,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -55,130 +51,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Successfully converted: 1003.ndax to 1003.csv\n",
-      "Successfully converted: 1004.ndax to 1004.csv\n",
-      "Successfully converted: 1005.ndax to 1005.csv\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\HeiliAavola\\anaconda3\\Lib\\site-packages\\LimeNDAX\\ndax_functions.py:267: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-      "\n",
-      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-      "\n",
-      "\n",
-      "  data_df[\"Step\"].ffill(inplace=True)\n",
-      "c:\\Users\\HeiliAavola\\anaconda3\\Lib\\site-packages\\LimeNDAX\\ndax_functions.py:33: UserWarning: IMPORTANT:This ndax is of the newest version.\n",
-      "            The output from Code contains calculated data for time, timeinstep, capacity and energy, same as how NEWARE does.\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\HeiliAavola\\anaconda3\\Lib\\site-packages\\LimeNDAX\\ndax_functions.py:61: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-      "\n",
-      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-      "\n",
-      "\n",
-      "  df[\"Time\"].where(nan_value2, time, inplace=True)\n",
-      "c:\\Users\\HeiliAavola\\anaconda3\\Lib\\site-packages\\LimeNDAX\\ndax_functions.py:65: FutureWarning: 'S' is deprecated and will be removed in a future version. Please use 's' instead of 'S'.\n",
-      "  timestamp = df[\"Timestamp\"].ffill() + pd.to_timedelta(time_inc.shift(), unit=\"S\")\n",
-      "c:\\Users\\HeiliAavola\\anaconda3\\Lib\\site-packages\\LimeNDAX\\ndax_functions.py:66: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-      "\n",
-      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-      "\n",
-      "\n",
-      "  df[\"Timestamp\"].where(nan_value, timestamp, inplace=True)\n",
-      "c:\\Users\\HeiliAavola\\anaconda3\\Lib\\site-packages\\LimeNDAX\\ndax_functions.py:69: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-      "\n",
-      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-      "\n",
-      "\n",
-      "  df[\"Capacity(Ah)\"].where(df[\"Time\"] != 0.0, 0.0, inplace=True)\n",
-      "c:\\Users\\HeiliAavola\\anaconda3\\Lib\\site-packages\\LimeNDAX\\ndax_functions.py:78: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-      "\n",
-      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-      "\n",
-      "\n",
-      "  df[\"Capacity(Ah)\"].where(nan_value, cap, inplace=True)\n",
-      "c:\\Users\\HeiliAavola\\anaconda3\\Lib\\site-packages\\LimeNDAX\\ndax_functions.py:84: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-      "\n",
-      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-      "\n",
-      "\n",
-      "  df[\"Energy(Wh)\"].where(nan_value, eng, inplace=True)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Successfully converted: 1006.ndax to 1006.csv\n",
-      "Successfully converted: 1007.ndax to 1007.csv\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\HeiliAavola\\anaconda3\\Lib\\site-packages\\LimeNDAX\\ndax_functions.py:267: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-      "\n",
-      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-      "\n",
-      "\n",
-      "  data_df[\"Step\"].ffill(inplace=True)\n",
-      "c:\\Users\\HeiliAavola\\anaconda3\\Lib\\site-packages\\LimeNDAX\\ndax_functions.py:33: UserWarning: IMPORTANT:This ndax is of the newest version.\n",
-      "            The output from Code contains calculated data for time, timeinstep, capacity and energy, same as how NEWARE does.\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\HeiliAavola\\anaconda3\\Lib\\site-packages\\LimeNDAX\\ndax_functions.py:61: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-      "\n",
-      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-      "\n",
-      "\n",
-      "  df[\"Time\"].where(nan_value2, time, inplace=True)\n",
-      "c:\\Users\\HeiliAavola\\anaconda3\\Lib\\site-packages\\LimeNDAX\\ndax_functions.py:65: FutureWarning: 'S' is deprecated and will be removed in a future version. Please use 's' instead of 'S'.\n",
-      "  timestamp = df[\"Timestamp\"].ffill() + pd.to_timedelta(time_inc.shift(), unit=\"S\")\n",
-      "c:\\Users\\HeiliAavola\\anaconda3\\Lib\\site-packages\\LimeNDAX\\ndax_functions.py:66: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-      "\n",
-      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-      "\n",
-      "\n",
-      "  df[\"Timestamp\"].where(nan_value, timestamp, inplace=True)\n",
-      "c:\\Users\\HeiliAavola\\anaconda3\\Lib\\site-packages\\LimeNDAX\\ndax_functions.py:69: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-      "\n",
-      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-      "\n",
-      "\n",
-      "  df[\"Capacity(Ah)\"].where(df[\"Time\"] != 0.0, 0.0, inplace=True)\n",
-      "c:\\Users\\HeiliAavola\\anaconda3\\Lib\\site-packages\\LimeNDAX\\ndax_functions.py:78: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-      "\n",
-      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-      "\n",
-      "\n",
-      "  df[\"Capacity(Ah)\"].where(nan_value, cap, inplace=True)\n",
-      "c:\\Users\\HeiliAavola\\anaconda3\\Lib\\site-packages\\LimeNDAX\\ndax_functions.py:84: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
-      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
-      "\n",
-      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
-      "\n",
-      "\n",
-      "  df[\"Energy(Wh)\"].where(nan_value, eng, inplace=True)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Successfully converted: 1008.ndax to 1008.csv\n"
+      "Successfully converted: 1001.ndax to 1001.csv\n",
+      "Successfully converted: 1002.ndax to 1002.csv\n",
+      "Error converting file 1009.ndax: 25\n",
+      "Error converting file 1010.ndax: 25\n"
      ]
     }
    ],
@@ -219,8 +95,8 @@
     "                print(f\"Error converting file {filename}: {str(e)}\")\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    input_folder = r\"C:\\Users\\HeiliAavola\\OneDrive - Stargate Hydrogen\\Desktop\\UT DE project\\Miniproject Data\\Anonymized data package\\Machine 1\\ndax files\\Long measurements - Copy\"  # Update with your input folder path\n",
-    "    output_folder = r\"C:\\Users\\HeiliAavola\\OneDrive - Stargate Hydrogen\\Desktop\\UT DE project\\Miniproject Data\\Anonymized data package\\Machine 1\\ndax files\\Long meausremets test ndax to csv\"  # Update with your output folder path\n",
+    "    input_folder = r\"C:\\Users\\heili\\OneDrive - Tartu Ülikool\\Msc Andmeteadus\\III semester\\data_engineering_2024\\Project\\DE_project\\anonymized_data_package\\machine_1\\ndax_files\\short_measurements\"  # Update with your input folder path\n",
+    "    output_folder = r\"C:\\Users\\heili\\OneDrive - Tartu Ülikool\\Msc Andmeteadus\\III semester\\data_engineering_2024\\Project\\DE_project\\anonymized_data_package\\machine_1_csv\\machine_1_csv_short\"  # Update with your output folder path\n",
     "\n",
     "    convert_ndax_to_csv(input_folder, output_folder)\n"
    ]
@@ -242,7 +118,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
