Update ndax_to_excel.ipynb with new changes

--- a/ndax_to_excel.ipynb
+++ b/ndax_to_excel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -134,8 +134,8 @@
     "            print(f\"- {file}\")\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    input_folder = r'C:\\Users\\HeiliAavola\\OneDrive - Stargate Hydrogen\\Desktop\\UT DE project\\Durga_new_2024_12_12\\ndax_raw'\n",
-    "    output_folder = r'C:\\Users\\HeiliAavola\\OneDrive - Stargate Hydrogen\\Desktop\\UT DE project\\Durga_new_2024_12_12\\ndax_to_excel_raw_a2'\n",
+    "    input_folder = r'' # add path\n",
+    "    output_folder = r'' # add path\n",
     "    \n",
     "    convert_ndax_files(input_folder, output_folder)"
    ]
