--- a/ndax_to_excel.ipynb
+++ b/ndax_to_excel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -10,35 +10,35 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Processing: DCT 574-5 - Sym Aegis Raney Ni Expanded Sheet.ndax\n",
-      "Successfully converted: DCT 574-5 - Sym Aegis Raney Ni Expanded Sheet.ndax\n",
+      "Processing: 1001.ndax\n",
+      "Successfully converted: 1001.ndax\n",
       "\n",
-      "Processing: DCT 575-6 - Sym Aegis Raney Ni Expanded Sheet.ndax\n",
-      "Successfully converted: DCT 575-6 - Sym Aegis Raney Ni Expanded Sheet.ndax\n",
+      "Processing: 1002.ndax\n",
+      "Successfully converted: 1002.ndax\n",
       "\n",
-      "Processing: DCT 580-3 Sym Yuxi Raney Ni SD LT 500 h.ndax\n",
-      "Successfully converted: DCT 580-3 Sym Yuxi Raney Ni SD LT 500 h.ndax\n",
+      "Processing: 1003.ndax\n",
+      "Successfully converted: 1003.ndax\n",
       "\n",
-      "Processing: DCT 581-4 Sym Yuxi Raney Ni SD LT 500 h.ndax\n",
-      "Successfully converted: DCT 581-4 Sym Yuxi Raney Ni SD LT 500 h.ndax\n",
+      "Processing: 1004.ndax\n",
+      "Successfully converted: 1004.ndax\n",
       "\n",
-      "Processing: DCT 588-3 Sym Aegis Raney Ni (Prod Samples) 160h.ndax\n",
-      "Successfully converted: DCT 588-3 Sym Aegis Raney Ni (Prod Samples) 160h.ndax\n",
+      "Processing: 1005.ndax\n",
+      "Successfully converted: 1005.ndax\n",
       "\n",
-      "Processing: DCT 588-3 Sym Aegis Raney Ni (Prod Samples) 21h.ndax\n",
-      "Successfully converted: DCT 588-3 Sym Aegis Raney Ni (Prod Samples) 21h.ndax\n",
+      "Processing: 1006.ndax\n",
+      "Successfully converted: 1006.ndax\n",
       "\n",
-      "Processing: DCT 589-4 Sym Aegis Raney Ni (Prod Samples) 160h.ndax\n",
-      "Successfully converted: DCT 589-4 Sym Aegis Raney Ni (Prod Samples) 160h.ndax\n",
+      "Processing: 1007.ndax\n",
+      "Successfully converted: 1007.ndax\n",
       "\n",
-      "Processing: DCT 589-4 Sym Aegis Raney Ni (Prod Samples) 21h.ndax\n",
-      "Successfully converted: DCT 589-4 Sym Aegis Raney Ni (Prod Samples) 21h.ndax\n",
+      "Processing: 1008.ndax\n",
+      "Successfully converted: 1008.ndax\n",
       "\n",
-      "Processing: DCT 596-1 Sym Yuxi Raney Ni.ndax\n",
-      "Successfully converted: DCT 596-1 Sym Yuxi Raney Ni.ndax\n",
+      "Processing: 1009.ndax\n",
+      "Successfully converted: 1009.ndax\n",
       "\n",
-      "Processing: DCT 597-2 Sym Yuxi Raney Ni.ndax\n",
-      "Successfully converted: DCT 597-2 Sym Yuxi Raney Ni.ndax\n",
+      "Processing: 1010.ndax\n",
+      "Successfully converted: 1010.ndax\n",
       "\n",
       "Conversion Summary:\n",
       "Total files processed: 10\n",
@@ -134,8 +134,8 @@
     "            print(f\"- {file}\")\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    input_folder = r'' # add path\n",
-    "    output_folder = r'' # add path\n",
+    "    input_folder = r'anonymized_data_package\\machine_1' # add path\n",
+    "    output_folder = r'airflow/project_data/anonymized_data_package/machine_1' # add path\n",
     "    \n",
     "    convert_ndax_files(input_folder, output_folder)"
    ]
@@ -157,7 +157,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
